# storage-auction-game

./: .env.example  .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
docs/adr/: 0001-fixed-storage-unit-truth.md  0002-deterministic-core-rules.md  0003-information-layer-separation.md  0004-episode-session-unit-hierarchy.md  0005-fictional-market-and-integer-money.md  0006-timed-observation-with-two-actions.md  0007-four-fixed-single-person-seats.md  0008-bounded-deepseek-decisions.md  0009-isolated-ai-seat-contexts.md  0010-four-level-item-presentation.md  0011-show-value-vs-realized-cash.md  0012-template-plus-seeded-generation.md  README.md
docs/architecture/: deepseek-integration.md  information-boundaries.md  money-and-valuation.md  persistence.md  randomness-and-replay.md  state-machines.md  system-overview.md
docs/archive/: README.md  initial-design-brief.md  video-analysis-revision.md
docs/product/: content-guidelines.md  game-loop.md  glossary.md  p0-scope.md  vision.md
docs/research/: video-findings.md
schemas/: README.md
src/storage_auction/: __init__.py
src/storage_auction/domain/: __init__.py
tests/: test_package.py
