[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "storage-auction-game"
version = "0.1.0"
description = "A deterministic, information-asymmetric storage auction game."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.13,<2",
    "pytest>=7.4,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
storage_auction = ["py.typed"]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
]

[tool.mypy]
files = [
    "src",
    "tests",
]
mypy_path = "src"
python_version = "3.9"
strict = true
warn_unused_configs = true
